# afi

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  README.md
examples/: table.rs
src/: audio.rs  codec.rs  graphic.rs  lib.rs  path_op.rs  text.rs  video.rs
src/video/: blend.rs  mod.rs
