# "afi" - Aldaron's Format Interface
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Jeron A. Lau 2017-2018.
# Distributed under the Boost Software License, Version 1.0.  (See accompanying
# file LICENSE or copy at https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "afi"
version = "0.5.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>",
]
license = "BSL-1.0"
documentation = "https://docs.rs/afi"
homepage = "https://gitlab.com/plopgrizzly/multimedia"
repository = "https://gitlab.com/plopgrizzly/multimedia/afi"
readme = "README.md"
description = "Audio & video structures, plus encoder & decoder traits."
keywords = ["afi", "format", "encoding", "decoding", "audiovideo"]
categories = ["encoding", "parsing", "data-structures", "multimedia"]

[dependencies]
